--- a/templates/board.html
+++ b/templates/board.html
@@ -1,3 +1,30 @@
+<!DOCTYPE HTML>
+<html>
 
+<head>
+	<title>supreme tic tac toe</title>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<link href="style.css" rel="stylesheet" type="text/css" /> 
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" ></script>
+    
+<script type="text/javascript">
+$(document).ready(function(){
+    $("td").click(function(event){
+     alert("Click!");
+    });
+});
+</script>
+    
+</head>
 
-<h1> Hello {{world}} </h1>
+<body>
+    <h1>supreme tic tac toe</h1>
+    <table>
+        <tr><td>x</td><td>x</td><td>o</td></tr>
+        <tr><td>o</td><td>x</td><td>o</td></tr>
+        <tr><td>x</td><td>x</td><td>o</td></tr>
+    </table>
+    <p>waiting for some one to connect ...</p>
+</body>
+
+</html>
