basic ajax round trip to the server works

--- a/templates/board.html
+++ b/templates/board.html
@@ -10,7 +10,9 @@
 <script type="text/javascript">
 $(document).ready(function(){
     $("td").click(function(event){
-     alert("Click!");
+        $.getJSON('pick.json?xy='+this.id, function(data) {
+            $('#message').html(data.picked);
+        });
     });
 });
 </script>
@@ -20,11 +22,11 @@ $(document).ready(function(){
 <body>
     <h1>supreme tic tac toe</h1>
     <table>
-        <tr><td>x</td><td>x</td><td>o</td></tr>
-        <tr><td>o</td><td>x</td><td>o</td></tr>
-        <tr><td>x</td><td>x</td><td>o</td></tr>
+        <tr><td id="00"></td><td id="01"></td><td id="02"></td></tr>
+        <tr><td id="10"></td><td id="11"></td><td id="12"></td></tr>
+        <tr><td id="20"></td><td id="21"></td><td id="22"></td></tr>
     </table>
-    <p>waiting for some one to connect ...</p>
+    <p id="message">waiting for some one to connect ...</p>
 </body>
 
 </html>
