wow two players can now play if they aggree on rules, next add the meat

--- a/data/style.css
+++ b/data/style.css
@@ -16,6 +16,8 @@ table {
 }
 
 td {
+    width: 33%;
+    height: 33%;
     border: 1px solid #811;
     background: white;
     text-align: center;
