--- a/data/style.css
+++ b/data/style.css
@@ -11,13 +11,10 @@ h1 {
 }
 
 table {
-    width: 100%;
-    height: 400px;
+    margin: 0px auto;
 }
 
 td {
-    width: 33%;
-    height: 33%;
     border: 1px solid #811;
     background: white;
     text-align: center;
