--- a/templates/board.html
+++ b/templates/board.html
@@ -4,7 +4,7 @@
 <head>
 	<title>supreme tic tac toe</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<link href="style.css" rel="stylesheet" type="text/css" /> 
+	<link href="static/style.css" rel="stylesheet" type="text/css" /> 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" ></script>
     
 <script type="text/javascript">
